# mini_timeline_scroll_gtk

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  dependency.sh  make_timeline_scroll.sh  video_fetch.h
.github/workflows/: cmake-multi-platform.yml  package_to_app.yml
include/: MainWindow.h  VideoWidget.h  video_backend.h  video_export_actions.h  video_hotkey_actions.h  video_implement.h  video_viewscaling.h  video_window.h
legacy/: main.c  timecode_check.c  timecode_check.h  video_fetch.c  video_implement.c  video_implement.h
src/: MainWindow.cpp  MainWindowActions.cpp  main.cpp  timecode_check.c  video_export_actions.c  video_fetch.c  video_hotkey_actions.c  video_implement.c  video_viewscaling.c  video_window.cpp  video_windowloads.cpp
